# RTPPlayer

./: .gitignore  PLAN.md  README.md  REPORT.md  agents.md  build.gradle.kts  codex_prompt.md  settings.gradle.kts  tasks.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gst-player.cpp  gst-player.h  gstreamer-jni.cpp  gstreamer_android_bootstrap.c
app/src/main/java/com/local/rtpplayer/: GStreamer.kt  MainActivity.kt  NetworkDebug.kt  UdpDebugProbe.kt
app/src/main/java/org/freedesktop/gstreamer/androidmedia/: GstAhcCallback.java  GstAhsCallback.java  GstAmcOnFrameAvailableListener.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
